refactor: change routes for API, log update
