# docs/swagger/swagger.yaml
@@ -9,26 +9,24 @@ servers:
 paths:
   /posts:
     get:
-      summary: Get all posts
-      operationId: getAllPosts
-      responses:
-        '200':
-          description: A list of posts.
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                  data:
-                    type: array
-                    items:
-                      $ref: '#/components/schemas/Post'
-        '500':
-          description: Error retrieving posts.
-
-  /post:
+        summary: Get all posts
+        operationId: getAllPosts
+        responses:
+          '200':
+            description: A list of posts.
+            content:
+              application/json:
+                schema:
+                  type: object
+                  properties:
+                    message:
+                      type: string
+                    data:
+                      type: array
+                      items:
+                        $ref: '#/components/schemas/Post'
+          '500':
+            description: Error retrieving posts.
     post:
       summary: Create a new post
       operationId: createPost
@@ -46,7 +44,7 @@ paths:
         '500':
           description: Error creating post.
 
-  /post/{id}:
+  /posts/{id}:
     get:
       summary: Get a post by ID
       operationId: getPostById
